# march-madness-optimizer

./: README.md  index.html  latest_run.json  matchup_probs.json  pyproject.toml
data/: sample_2026_bracket.json  scraped_metrics_2026.json
src/march_madness_optimizer/: __init__.py  bracket.py  cli.py  models.py  optimizer.py
